2011-05-22  Robert Larice
 * src/spicelib/devices/hisim2/hsm2def.h :
   hisim2, add ngspice specific GENinstance struct slot 'HSM2owner' aka `GENowner'

2011-05-22  Robert Larice
 * src/spicelib/devices/hisim2/hsm2eval.c :
   hisim2, drop unused static functions (swallow warnings)

2011-05-22  Robert Larice
 * src/spicelib/devices/hisim2/hsm2eval.c ,
 * src/spicelib/devices/hisim2/hsm2temp.c :
   hisim2, drop unused vars (swallow warnings)

2011-05-22  Robert Larice
 * src/spicelib/devices/hisim2/hsm2noi.c :
   hisim2, fix NevalSrc(), Nintegrate() redeclaration

2011-05-22  Robert Larice
 * src/spicelib/devices/hisim2/hsm2noi.c :
   hisim2, drop (GENERIC **) NULL pointer casts

2011-05-22  Robert Larice
 * src/spicelib/devices/hisim2/hsm2cvtest.c ,
 * src/spicelib/devices/hisim2/hsm2ld.c :
   hisim2, rename FABS() ->  fabs()

2011-05-22  Robert Larice
 * src/spicelib/devices/hisim2/* :
   hisim2, convert K&R function definitions to ansi style

2011-05-22  Robert Larice
 * src/spicelib/devices/hisim2/hsm2noi.c :
   hisim2, remove #include "fteconst.h"

2011-05-22  Robert Larice
 * src/spicelib/devices/hisim2/* :
   hisim2, use NG_IGNORE() (swallow warnings)

2011-05-22  Robert Larice
 * src/spicelib/devices/hisim2/* :
   hisim2, remove #include "util.h"

2011-05-22  Robert Larice
 * src/spicelib/devices/hisim2/* :
   hisim2, #include "spice.h"  -->  "ngspice.h"

2011-05-22  Robert Larice
 * src/spicelib/devices/hisim2/hsm2eval.c :
   hisim2, remove unused labels (swallow warnings)

2011-05-22  Robert Larice
 * src/spicelib/devices/hisim2/Makefile.am ,
 * src/spicelib/devices/hisim2/.cvsignore :
   hisim2, new files Makefile.am and .cvsignore

2011-05-22  Robert Larice
 * src/spicelib/devices/hisim2/* :
   hisim2, populate this new directory
     with files from HiSIM_2.5.1_Release_20110407.zip
   unchanged, from
     HiSIM_2.5.1_Release_20110407/HiSIM_2.5.1_C-Code/hisim2/

2011-05-21  Robert Larice
 * src/spicelib/devices/hisimhv/hsmhvset.c :